<resources>
    <string name="app_name">Bacon_Fortune</string>
    <string name="action_settings">Settings</string>
    <string name="header_text">What Bacon are You?</string>
    <string name="username">Your Name</string>
    <string name="toggle_on">fat</string>
    <string name="toggle_off">sassy</string>
    <string name="cooking_radio1">fatty</string>
    <string name="cooking_radio2">lean</string>
    <string name="typebox_1">woodsmoked</string>
    <string name="typebox_2">black pepper</string>
    <string name="typebox_3">uncured</string>
    <string-array name="cooking_level">
        <item>raw</item>
        <item>greasy</item>
        <item>crispy</item>
        <item>burnt</item>
    </string-array>
    <string name="button_text">Sizzle</string>
    <string name="sizzle"></string>
</resources>
